fixes for dealer locator on mobile #157

--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -103,12 +103,6 @@ main .section.dealer-locator-container > div {
     justify-content: space-around;
 }
 
-@media (max-width: 992px) {
-    .dealer-locator {
-        height:calc(100% - 6.1em)!important;
-    }
-}
-
 .dealer-locator .partsasist-form {
     z-index: 1050;
     display: none;
@@ -728,7 +722,7 @@ main .section.dealer-locator-container > div {
     }
 
     .dealer-locator #map {
-        height: 50%
+        height: calc(50% - 39px);
     }
 }
 
